// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`production dynamic routes param routes 1`] = `
Object {
  "super": "additional",
  "userId": "23",
}
`;

exports[`production dynamic routes unnamed wildcard routes 1`] = `
Object {
  "*": "super",
  "0": "super",
}
`;

exports[`production functions can parse different ways of sending data file in multipart/form 1`] = `
Array [
  Object {
    "buffer": Object {
      "data": Array [
        104,
        105,
        32,
        102,
        114,
        105,
        101,
        110,
        100,
        115,
        10,
      ],
      "type": "Buffer",
    },
    "encoding": "7bit",
    "fieldname": "file",
    "mimetype": "text/plain",
    "originalname": "test.txt",
    "size": 11,
  },
]
`;

exports[`production functions can parse different ways of sending data form data 1`] = `
Object {
  "a": "form-data",
}
`;

exports[`production functions can parse different ways of sending data form parameters 1`] = `
Object {
  "a": "form parameters",
}
`;

exports[`production functions can parse different ways of sending data json body 1`] = `
Object {
  "a": "json",
}
`;

exports[`production functions can parse different ways of sending data query string 1`] = `
Object {
  "amIReal": "true",
}
`;

exports[`production functions get parsed cookies cookie 1`] = `
Object {
  "foo": "blue",
}
`;

exports[`production response formats returns json correctly 1`] = `
Object {
  "amIJSON": true,
}
`;

exports[`production response formats returns json correctly 2`] = `
Object {
  "connection": "close",
  "content-length": "16",
  "content-type": "application/json; charset=utf-8",
  "etag": "W/\\"10-R6td1pV+B+Xz9CJkNeaEI2kP+QY\\"",
  "x-powered-by": "Express",
}
`;

exports[`production response formats returns text correctly 1`] = `"I am typescript"`;

exports[`production response formats returns text correctly 2`] = `
Object {
  "connection": "close",
  "content-length": "15",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"f-zwggT56l/fnWBm4dI0PkA4E3i4E\\"",
  "x-powered-by": "Express",
}
`;

exports[`production routes with special characters 1`] = `"I-Am-Capitalized.js"`;

exports[`production routes with special characters 2`] = `"some whitespace.js"`;

exports[`production routes with special characters 3`] = `"with-äöü-umlaut.js"`;

exports[`production routes with special characters 4`] = `"some-àè-french.js"`;

exports[`production routes with special characters 5`] = `"some-אודות.js"`;

exports[`production secondary-level API 1`] = `"I am at a secondary-level"`;

exports[`production secondary-level API 2`] = `"I am another sub-directory function"`;

exports[`production secondary-level API with index.js 1`] = `"I am an index.js in a sub-directory!"`;

exports[`production top-level API 1`] = `"I am at the top-level"`;

exports[`production typescript typescript functions work 1`] = `"I am typescript"`;
